--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="auth_username_hint">Ваш логин</string>
     <string name="auth_password_hint">Пароль</string>
     <string name="auth_login_button">Войти</string>
+
+    <string name="retry_button">Повторить</string>
     
+    <string name="payments_title">Платежи</string>
 </resources>
