--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="retry_button">Повторить</string>
     
     <string name="payments_title">Платежи</string>
+    <string name="payment_amount">Сумма:</string>
+    <string name="payment_date">Создан:</string>
+    
+    <string name="logout_dialog_title">Выход</string>
+    <string name="logout_dialog_message">Вы действительно хотите выйти?</string>
+    <string name="logout_dialog_confirm">Выйти</string>
+    <string name="logout_dialog_cancel">Отмена</string>
+    
 </resources>
